LoginServlet.java 생성

--- a/WebContent/login/loginForm.html
+++ b/WebContent/login/loginForm.html
@@ -1,3 +1,4 @@
+<!-- 로그인하기위해 아이디와 비밀번호를 입력받는 페이지 -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -52,11 +53,11 @@ table {
 		<h2>로그인</h2>
 		<form action="login" method="post">
 			<table>
-				<tr>
+				<tr><!-- 아이디 값을 입력받는 양식. -->
 					<td class="td_center"><label for="id">아 이 디</label></td>
 					<td class="td_right"><input type="text" name="id" id="id" placeholder="아이디를 입력하세요." required="required"></td>
 				</tr>
-				<tr>
+				<tr><!-- 비밀번호 값을 입력받는 양식. -->
 					<td class="td_center"><label for="passwd">비밀번호</label></td>
 					<td class="td_right"><input type="password" name="passwd" id="passwd" placeholder="비밀번호를 입력하세요." required="required"></td>
 				</tr>
