index.jsp 쿠키 테스트 완료, main.jsp 세션 테스트 완료

--- a/WebContent/loginForm.html
+++ b/WebContent/loginForm.html
@@ -62,8 +62,8 @@ table {
 					<td class="td_right"><input type="password" name="passwd" id="passwd" placeholder="비밀번호를 입력하세요." required="required"></td>
 				</tr>
 				<tr><!-- 로그인 유지여부(쿠키사용) 체크. -->
-					<td class="td_center"><label for="useCookie">로그인 유지 </label></td>
-					<td class="td_right"><input type="checkbox" name="useCookie" id="useCookie"/></td>
+					<td class="td_center"></td>
+					<td class="td_right"><label for="useCookie">로그인 유지 </label><input type="checkbox" name="useCookie" id="useCookie"/></td>
 				</tr>
 			</table><br>
 			<input type="submit" value="로그인" id="selectButton">
