--- a/WebContent/loginForm.html
+++ b/WebContent/loginForm.html
@@ -12,7 +12,7 @@ a, a:hover {
 
 #passForm { 
 	width: 500px;
-	height : 200px;
+	height : 220px;
 	border: 1px solid gray; 
 	margin: auto;
 	text-align: center;
@@ -61,7 +61,7 @@ table {
 					<td class="td_center"><label for="passwd">비밀번호</label></td>
 					<td class="td_right"><input type="password" name="passwd" id="passwd" placeholder="비밀번호를 입력하세요." required="required"></td>
 				</tr>
-				<tr> 로그인 유지여부(쿠키사용) 체크.
+				<tr><!-- 로그인 유지여부(쿠키사용) 체크. -->
 					<td class="td_center"></td>
 					<td class="td_right"><label for="useCookie">로그인 유지 </label><input type="checkbox" name="useCookie" id="useCookie"/></td>
 				</tr>
